@@ -8,6 +8,7 @@
  - translated to Portuguese (Brazil) (thanks to Zoé Junior)
  - issue #152 : detect Travel Direction and adjust relative direction to destionation accordingly
  - issue #155 : add script to remove incomplete translations
+ - use enum NavigationMode for NavigationView.mMode
 
  v0.2 (released on 26Apr2014)
  - issue #112 : update ic_launcher-web.png icon
